Adding GitHub Sealed Secret file

--- a/secret.yaml
+++ b/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-secret
+  name: github-secret
   namespace: fluxcdtutorial
 data:
   password: Z2hwX3BqbUI0bjVNcmtKV3VTeHZVbFFlTU9ZMkt5M25ISTFDOTFONg==  # base64 encoded GitHub password
