Updating GitHub Secret Files with PAT token

--- a/secret.yaml
+++ b/secret.yaml
@@ -4,5 +4,4 @@ metadata:
   name: github-secret
   namespace: fluxcdtutorial
 data:
-  password: Z2hwX3BqbUI0bjVNcmtKV3VTeHZVbFFlTU9ZMkt5M25ISTFDOTFONg==  # base64 encoded GitHub password
-  username: anVhcnVydHB0                                              # base64 encoded GitHub username
+  token: Z2hwX3BqbUI0bjVNcmtKV3VTeHZVbFFlTU9ZMkt5M25ISTFDOTFONg==  # base64 encoded GitHub password
