Updating Provider YAML file with github-token

--- a/deploy/flux_provider.yaml
+++ b/deploy/flux_provider.yaml
@@ -8,4 +8,4 @@ spec:
   channel: general
   address: https://github.com/juarurtpt/k8s_nginxapp_sot
   secretRef:
-    name: github-secret
+    name: github-token
