--- a/deploy/flux_alert.yaml
+++ b/deploy/flux_alert.yaml
@@ -1,7 +1,7 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Alert
 metadata:
-  name: flux-alert
+  name: github-status-alert
   namespace: fluxcdtutorial
 spec:
   providerRef:
