--- a/deploy/flux_provider.yaml
+++ b/deploy/flux_provider.yaml
@@ -1,7 +1,7 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta1
 kind: Provider
 metadata:
-  name: flux-github-provider
+  name: github-status-provider
   namespace: fluxcdtutorial
 spec:
   type: github
