--- a/secret.yaml
+++ b/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: github-secret
+  name: github-token
   namespace: fluxcdtutorial
 data:
-  token: Z2hwX3BqbUI0bjVNcmtKV3VTeHZVbFFlTU9ZMkt5M25ISTFDOTFONg==  # base64 encoded GitHub password
+  token: Z2hwX0JsV1JCWjVXSXdvRFRFZU10UnFQVEJDMklxdnpUZDJRajNvYg==  # base64 encoded GitHub PAT token = flux-token
